Fix width issue on mobile

--- a/src/patternlibrary/scss/base.scss
+++ b/src/patternlibrary/scss/base.scss
@@ -10,7 +10,7 @@
   body {
     color: #000;
     margin: 0;
-    min-width: 360px;
+    min-width: 320px;
     padding: 0;
     position: relative;
     visibility: visible;
